# backend-service

./: .env  Dockerfile  example.env  pyproject.toml
src/: main.py
src/api/query/: crud.py  schemas.py  utils.py  views.py
src/api/user/: schemas.py  views.py
src/db/helpers/: __init__.py  minio.py  mongo.py
src/db/models/: __init__.py  query.py  user.py
