[tool.poetry]
name = "backend-service"
version = "0.1.0"
description = ""
authors = ["nebaskov <nebaskov@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pymongo = "^4.8.0"
minio = "^7.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
